content/v1.4.5/zh/api/viewmodel/EncyclopediaPageArgs.md
---
title: "EncyclopediaPageArgs"
description: "EncyclopediaPageArgs 的自动生成类参考。"
---
# EncyclopediaPageArgs

**Namespace:** TaleWorlds.CampaignSystem.ViewModelCollection.Encyclopedia.Pages
**Module:** TaleWorlds.CampaignSystem
**Type:** `public struct EncyclopediaPageArgs`
**Base:** 无
**File:** `bin/TaleWorlds.CampaignSystem.ViewModelCollection/TaleWorlds.CampaignSystem.ViewModelCollection.Encyclopedia.Pages/EncyclopediaPageArgs.cs`

## 概述

`EncyclopediaPageArgs` 位于 `TaleWorlds.CampaignSystem.ViewModelCollection.Encyclopedia.Pages`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem.ViewModelCollection.Encyclopedia.Pages` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要方法

### EncyclopediaPageArgs
`public struct EncyclopediaPageArgs(object o)`

**用途 / Purpose:** **用途 / Purpose:** 调用 EncyclopediaPageArgs 对应的操作。

```csharp
// 先通过子系统 API 拿到 EncyclopediaPageArgs 实例
EncyclopediaPageArgs encyclopediaPageArgs = ...;
var result = encyclopediaPageArgs.EncyclopediaPageArgs(o);
```

## 使用示例

```csharp
// 通常从对应子系统 API 获取实例后调用
EncyclopediaPageArgs encyclopediaPageArgs = ...;
encyclopediaPageArgs.EncyclopediaPageArgs(o);
```

## 参见

- [本区域目录](../)